# llm-code-reducer

./: Dockerfile  LICENSE  README.md  pixi.toml  pyproject.toml
src/mcp_server_code_reducer/: __init__.py  __main__.py  context_manager.py  database.py  debug_handler.py  edit_translator.py  models.py  server.py
test/: code_reducer_server_test.py  conftest.py  test_context_manager.py  test_database_integration.py  test_debug_removal.py  test_debug_removal_integration.py  test_edit_translator.py  test_improved_debug_removal.py
