[project]
name = "mcp-server-code-reducer"
version = "0.1.0"
description = "A Model Context Protocol server providing tools for reducing code context to minimize token usage with LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Claude", email = "claude@anthropic.com" },
]
keywords = ["code", "reducer", "mcp", "llm", "token"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "astor>=0.8.1",
]

[project.scripts]
mcp-server-code-reducer = "mcp_server_code_reducer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]